IMAP: don't start STORE job with no flags

fromAkonadiToSupportedImapFlags() can filter out all the flags that we
are trying to append/remove which leads to UID STORE command with not
FLAGS attributes, which is not RFC conformant and is rejected by some
servers.

BUG: 367708
FIXED-IN: 5.4.1